--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,24 @@
 ---
+import TestimonialGrid from "../components/TestimonialGrid.vue";
+
 
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/png" href="/favicon-32x32.png" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<meta name="description" content="Section to see testimonials in a CSS grid." />
+		<meta name="robots" content="all" />
+		
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+		<title>Testimonials Grid Section</title>
 	</head>
-	<body>
-		<h1>Astro</h1>
+	<body class="font-barlow p-4 w-full min-h-screen h-fit flex items-center justify-center bg-neutral-gray-blue">
+		<TestimonialGrid client:load />
 	</body>
 </html>
