add main landmark

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,8 @@ import TestimonialGrid from "../components/TestimonialGrid.vue";
 		<title>Testimonials Grid Section</title>
 	</head>
 	<body class="font-barlow p-4 w-full min-h-screen h-fit flex items-center justify-center bg-neutral-gray-blue">
-		<TestimonialGrid client:load />
+		<main>
+			<TestimonialGrid client:load />
+		</main>
 	</body>
 </html>
