--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import TestimonialGrid from "../components/TestimonialGrid.vue";
 		<title>Testimonials Grid Section</title>
 	</head>
 	<body class="font-barlow p-4 w-full min-h-screen h-fit flex items-center justify-center bg-neutral-gray-blue">
-		<main>
+		<main class="flex items-center justify-center">
 			<TestimonialGrid client:load />
 		</main>
 	</body>
